# lssdp-cpp

./: CMakeLists.txt  LICENSE  Readme.md  changelog.md  lssdpcpp-config.cmake.in
examples/: CMakeLists.txt
examples/service/: CMakeLists.txt  main.cpp
examples/service_finder/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/lssdpc/: lssdp.c  lssdp.h
src/lssdpcpp/: lssdpcpp.cpp  lssdpcpp.h
src/url/: url.cpp  url.hpp
test/: CMakeLists.txt
test/network_interfaces/src/: CMakeLists.txt  test_network_interfaces.cpp
test/service_finder/src/: CMakeLists.txt  test_service_finder.cpp
